// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MicrosoftButton/>, change theme: dark 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "rippleRadius": undefined,
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="box-only"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderColor": "#757575",
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "center",
        "position": "relative",
      },
      Object {
        "backgroundColor": "#1e1e1e",
      },
    ]
  }
  testID="oauth-microsoft"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "height": 32,
          "left": 7,
          "position": "absolute",
          "top": 8,
          "width": 32,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#ff4a18",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "relative",
            },
          ]
        }
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#76bc00",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "absolute",
            },
          ]
        }
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#35a2f4",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "absolute",
            },
          ]
        }
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#ffbb00",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "absolute",
            },
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#212121",
          "fontFamily": "Roboto",
          "fontSize": 14,
        },
        Object {
          "color": "#e0e1e2",
          "fontSize": 16,
        },
      ]
    }
  >
    Sign in with Microsoft
  </Text>
</View>
`;

exports[`<MicrosoftButton/>, change theme: light 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "rippleRadius": undefined,
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="box-only"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderColor": "#757575",
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "center",
        "position": "relative",
      },
      false,
    ]
  }
  testID="oauth-microsoft"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "height": 32,
          "left": 7,
          "position": "absolute",
          "top": 8,
          "width": 32,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#ff4a18",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "relative",
            },
          ]
        }
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#76bc00",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "absolute",
            },
          ]
        }
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#35a2f4",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "absolute",
            },
          ]
        }
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#ffbb00",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "absolute",
            },
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#212121",
          "fontFamily": "Roboto",
          "fontSize": 14,
        },
        false,
      ]
    }
  >
    Sign in with Microsoft
  </Text>
</View>
`;

exports[`<MicrosoftButton/>, change theme: light 2`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "rippleRadius": undefined,
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="box-only"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderColor": "#757575",
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "center",
        "position": "relative",
      },
      false,
    ]
  }
  testID="oauth-microsoft"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "height": 32,
          "left": 7,
          "position": "absolute",
          "top": 8,
          "width": 32,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#ff4a18",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "relative",
            },
          ]
        }
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#76bc00",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "absolute",
            },
          ]
        }
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#35a2f4",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "absolute",
            },
          ]
        }
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#ffbb00",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "absolute",
            },
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#212121",
          "fontFamily": "Roboto",
          "fontSize": 14,
        },
        false,
      ]
    }
  >
    Sign in with Microsoft
  </Text>
</View>
`;

exports[`<MicrosoftButton/>, render, dark theme 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "rippleRadius": undefined,
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="box-only"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderColor": "#757575",
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "center",
        "position": "relative",
      },
      Object {
        "backgroundColor": "#1e1e1e",
      },
    ]
  }
  testID="oauth-microsoft"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "height": 32,
          "left": 7,
          "position": "absolute",
          "top": 8,
          "width": 32,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#ff4a18",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "relative",
            },
          ]
        }
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#76bc00",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "absolute",
            },
          ]
        }
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#35a2f4",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "absolute",
            },
          ]
        }
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#ffbb00",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "absolute",
            },
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#212121",
          "fontFamily": "Roboto",
          "fontSize": 14,
        },
        Object {
          "color": "#e0e1e2",
          "fontSize": 16,
        },
      ]
    }
  >
    Sign in with Microsoft
  </Text>
</View>
`;

exports[`<MicrosoftButton/>, renders default 1`] = `
<View
  accessible={true}
  focusable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "rippleRadius": undefined,
      "type": "ThemeAttrAndroid",
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="box-only"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderColor": "#757575",
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "center",
        "position": "relative",
      },
      false,
    ]
  }
  testID="oauth-microsoft"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "height": 32,
          "left": 7,
          "position": "absolute",
          "top": 8,
          "width": 32,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#ff4a18",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "relative",
            },
          ]
        }
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#76bc00",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "absolute",
            },
          ]
        }
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#35a2f4",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "absolute",
            },
          ]
        }
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontFamily": "awardwallet",
              "textAlign": "center",
            },
            Object {
              "color": "#ffbb00",
            },
            Object {
              "fontSize": 30,
              "lineHeight": 30,
            },
            Object {
              "position": "absolute",
            },
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#212121",
          "fontFamily": "Roboto",
          "fontSize": 14,
        },
        false,
      ]
    }
  >
    Sign in with Microsoft
  </Text>
</View>
`;
